--- a/index.html
+++ b/index.html
@@ -3,14 +3,93 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>سایت نمایشی من</title>
+    <title>صفحه نمایشی نئونی</title>
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; padding: 50px; }
-        h1 { color: #333; }
+        /* استایل عمومی برای صفحه */
+        body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            background: #0d0d0d;
+            font-family: Arial, sans-serif;
+            overflow: hidden;
+        }
+
+        /* استایل پس زمینه */
+        body::before {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: radial-gradient(circle, rgba(0, 0, 0, 0.4), #000000);
+            z-index: -1;
+        }
+
+        /* استایل عنوان */
+        h1 {
+            font-size: 3em;
+            color: #fff;
+            text-shadow: 0 0 15px #00ffff, 0 0 30px #00ffff;
+            margin-bottom: 50px;
+        }
+
+        /* استایل لینک‌ها */
+        .links a {
+            display: block;
+            margin: 20px;
+            padding: 15px 30px;
+            font-size: 1.5em;
+            text-align: center;
+            color: #00ffff;
+            text-decoration: none;
+            border-radius: 10px;
+            position: relative;
+            overflow: hidden;
+            text-shadow: 0 0 10px #00ffff, 0 0 20px #00ffff;
+            transition: 0.3s;
+        }
+
+        .links a::before, .links a::after {
+            content: '';
+            position: absolute;
+            width: 120%;
+            height: 120%;
+            top: -20%;
+            left: -20%;
+            background: linear-gradient(45deg, transparent, #00ffff, transparent);
+            transform: rotate(45deg);
+            z-index: -1;
+            transition: 0.5s ease;
+            opacity: 0.3;
+        }
+
+        .links a:hover::before {
+            top: -100%;
+            opacity: 0.5;
+        }
+
+        .links a:hover::after {
+            left: -100%;
+            opacity: 0.5;
+        }
+
+        /* افکت نئونی بیشتر هنگام هاور */
+        .links a:hover {
+            color: #ff00ff;
+            text-shadow: 0 0 20px #ff00ff, 0 0 40px #ff00ff;
+        }
     </style>
 </head>
 <body>
-    <h1>خوش آمدید به سایت نمایشی من!</h1>
-    <p>این یک سایت تک‌برگ ساده است.</p>
+    <div class="content">
+        <h1>صفحه نئونی من</h1>
+        <div class="links">
+            <a href="https://t.me/your_username" target="_blank">TELEGRAM</a>
+            <a href="https://t.me/your_channel" target="_blank">TELEGRAM CHANNEL</a>
+        </div>
+    </div>
 </body>
 </html>
