--- a/index.html
+++ b/index.html
@@ -31,8 +31,15 @@
             color: #fff;
             text-shadow: 0 0 15px #00ffff, 0 0 30px #00ffff;
             margin-bottom: 50px;
+            text-align: center;
         }
         
+        .links {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
         .links a {
             display: block;
             margin: 20px;
@@ -82,9 +89,8 @@
     <div class="content">
         <h1>HEX NIX</h1>
         <div class="links">
-            <a href="mailto:HEXNIX@protonmail.com">MESSAGE US</a>
+            <a href="mailto:Callofbotzztg@gmail.com">Send Email</a>
         </div>
     </div>
 </body>
 </html>
-/*we like a JET ?*/
