--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <div class="content">
         <h1>HEX NIX</h1>
         <div class="links">
-            <a href="mailto:Callofbotzztg@gmail.com">Send Email</a>
+            <a href="mailto:HEXNIX@protonmail.com">Send Email</a>
         </div>
     </div>
 </body>
